Button spacing fixed below instructions

--- a/src/components/Instructions.module.css
+++ b/src/components/Instructions.module.css
@@ -19,5 +19,7 @@
 }
 
 .navButtons {
+    display: flex;
+    gap: 4em;
     padding: 2em;
 }
